[package]
name = "postgres-util"
version = "0.1.0"
authors = ["Jeff Davis <jeff@j-davis.com>"]
edition = "2018"
license = "PostgreSQL OR MIT"
description = "PostgreSQL utility library."
repository = "https://github.com/jeff-davis/postgres-util.rs"
documentation = "https://docs.rs/postgres-util"

[dependencies]
regex = "^1.3"
